<resources>
    <string name="app_name">3DModelingDemo</string>
    <string name="splash_app_name">3DModelingDemo</string>
    <string name="splash_power_hms">Power by HMS</string>
    <string name="main_home">Home</string>
    <string name="main_mine">Me</string>
    <string name="start_create_model">Start Modeling</string>
    <string name="create_model_des">Shoot a real object and quickly create a model</string>
    <string name="create_material">Create Materials</string>
    <string name="create_material_des">Quickly create PBR materials</string>
    <string name="user_use_book">Usage Guide</string>
    <string name="common_model_text">Official Models</string>
    <string name="shopping_mall_text">Mall</string>
    <string name="logint_out">Not logged in</string>
    <string name="login_can_build_model">Cloud modeling can be performed only after login.</string>
    <string name="login_hwid_text">One-click login with HUAWEI ID</string>
    <string name="mine_model_text">My Models</string>
    <string name="mine_material_text">My Materials</string>
    <string name="advice_and_problem">Questions and Suggestions</string>
    <string name="privacy_show_text">Privacy Statement</string>
    <string name="about_text">About</string>
    <string name="login_out_text">Log Out</string>
    <string name="setting_use_text">Settings</string>
    <string name="scan_model_text">Scan Mode</string>
    <string name="history_data_text">History</string>
    <string name="model_history_text">Model</string>
    <string name="material_history_text">Material</string>
    <string name="model_display_text">Material Preview</string>
    <string name="wait_to_upload_text">Waiting to upload</string>
    <string name="product_doing_text">Generating</string>
    <string name="wait_product_doing_text">Waiting to generate</string>
    <string name="finish_text">Complete</string>
    <string name="finish_fail_text">Reconstruction failed</string>
    <string name="finish_fail_text1">Generation failed</string>
    <string name="guide_ui_text">Boot UI</string>
    <string name="slam">SLAM</string>
    <string name="rgb">RGB</string>
    <string name="wait_rebuild_text">Waiting to reconstruct</string>
    <string name="wait_rebuild_doing_text">Reconstructing</string>
    <string name="action_settings">Settings</string>
    <string name="model_name">Model name</string>
    <string name="texture">Texture</string>
    <string name="invert_texture_coordinates">Invert texture coordinates</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="load_model">Load Model</string>
    <string name="toggle_wireframe">Toggle wireframe</string>
    <string name="toggle_textures">Toggle textures</string>
    <string name="toggle_lights">Toggle lights</string>
    <string name="toggle_animation">Toggle animation</string>
    <string name="toggle_boundingbox">Toggle bounding box</string>
    <string name="load_texture">Load texture</string>
    <string name="app_logo_desc">Teapot animated logo</string>
    <string name="delete_text">Delete</string>
    <string name="save_text">Save</string>
    <string name="trending">Trending</string>
    <string name="scan_text">scans</string>
    <string name="scan_doing_text">Scanning</string>
    <string name="start_scan_tip_text">The target object is detected. Click the button to start scanning.</string>
    <string name="do_scan_tip_text">Please place the target object in the center of the screen</string>
    <string name="finish_scan_tip_text">Scan completed</string>
    <string name="upload_to_service_text">Upload to the cloud?</string>
    <string name="cancel_text">Cancel</string>
    <string name="sure_text">Confirm</string>
    <string name="downloading_dialog_text">Downloading...</string>
    <string name="uploading_dialog_text">Uploading...</string>
    <string name="download_text">Download</string>
    <string name="grouping_text">grouping</string>
    <string name="upload_mall_text">grouping</string>
    <string name="upload_yun_text">Uploading Cloud Modeling</string>
    <string name="start_text">Start</string>
    <string name="take_photo_tips_text">Place the object on a solid-color plane with soft lighting. It is recommended to take more than 50 shots in a circle around the object. The screen-to-body ratio of the object is as large and complete as possible.</string>
    <string name="take_photo_sure_text">Do not remind again</string>
    <string name="take_photo_doing_text">Shooting</string>
    <string name="doing_post_text">Uploading...</string>
    <string name="upload_text_success">Upload completed</string>
    <string name="offical_name_text">3D reconstruction of official accounts</string>
    <string name="material_model_text">mode</string>
    <string name="sync_model_text">Synchronous mode</string>
    <string name="async_model_text">Asynchronous mode</string>
    <string name="tip_model_text">A material can be uploaded in synchronous mode. In asynchronous mode, 1 to 10 materials can be uploaded.</string>
    <string name="tip_sync_model_text">Synchronous mode, supporting the upload of a single material</string>
    <string name="tip_async_model_text">In asynchronous mode, 1 to 5 materials can be uploaded.</string>
    <string name="upload_text">Upload</string>
    <string name="scan_again_text">Scan again</string>
    <string name="take_photo_point_text">Aim at the target material and click the button to capture</string>
    <string name="resolution_text">Resolution</string>
    <string name="resolution_setting_text">Resolution</string>
    <string name="ShotMode_setting_text">Shot Mode</string>
    <string name="user_agreement_text">3D Cube User Agreement</string>
    <string name="and_text">with</string>
    <string name="magic_agreement_text">Statement on 3D Rubik\'s Cube and Privacy</string>
    <string name="open_source_text">Open source license</string>
    <string name="modeling_text">Start Modeling</string>
    <string name="build_material_text">Create Materials</string>
    <string name="quickly_convert_text">Help you quickly convert a real object into an exquisite 3D model; only need to take pictures or video...</string>
    <string name="common_problem_text">FAQ</string>
    <string name="mobile_phones_ask_text">What are the requirements for your device?</string>
    <string name="download_and_use_text">How to download and use the created model?</string>
    <string name="commercially_available_text">Can models and materials created by myself be commercially available?</string>
    <string name="more_text"><![CDATA[More>>]]></string>
    <string name="modeled_occupy_text">Ensure that the objects that need to be modeled occupy the screen as much as possible</string>
    <string name="generation_of_3d_models_text">For objects that support specifications, multiple images are taken around a circle to help you quickly realize automatic generation of 3D models.</string>
    <string name="specification_requirements_text">Does object modeling support object specification requirements?</string>
    <string name="materials_that_support_specifications_text">For materials that support specifications, a single flat material area is collected to ensure soft lighting, clear images, no bright spots, no shadows, and no reflections.</string>
    <string name="materials_capture_text">Collects a single flat material area with soft illumination and clear images without bright spots, shadows, or reflections.</string>
    <string name="types_of_materials_text">What types of materials are supported by material generation?</string>
    <string name="ask_phone_text">Huawei mobile phones and Huawei tablets EMUI 3.1 and above, non-Huawei phones and non-Huawei tablets Android 4.4 and above.</string>
    <string name="typical_objects_text">Objects need to have rich textures, non-reflective, and medium size. Typical objects include commodities (soft toys, bags, shoes), furniture (sofa), cultural relics (bronze, stone, wood), etc.</string>
    <string name="synthetic_materials_text">It supports concrete, marble, rock, gravel, brick, plaster, clay, metal, wood, bark, leather, fabric, paint, plastic, synthetic materials. Transparent and translucent materials are not supported.</string>
    <string name="continuous_shooting_text">Continuous shooting</string>
    <string name="click_shooting_text">Click</string>
    <string name="shooting_mode">Shoot Mode</string>
    <string name="take_more_than_50_tips">It is recommended to take more than 50 photos, the modeling effect will be better</string>
    <string name="version_text">Version:</string>
    <string name="rights_reserved_text">Copyright ©2020-2021 3D Magic All rights reserved</string>
    <string name="build_finish_text">modeling is complete</string>
    <string name="normal_mode_text">Normal mode</string>
    <string name="turntable_mode_text">Turntable mode</string>
    <string name="upload_models_materials_file_text">Upload materials to build models/materials</string>
    <string name="select_folder_text">Select folder</string>
    <string name="item_text">item</string>
    <string name="model_material_text">Model</string>
    <string name="model_material_material_text">Material</string>
    <string name="upload_material_type_text">Upload material type</string>
    <string name="next_step_text">Next step</string>
    <string name="first_step_text">First</string>
    <string name="second_step_text">Second</string>
    <string name="third_step_text">Third</string>
    <string name="the_fourth_step_text">Fourth</string>
    <string name="the_fifth_step_text">Fifth</string>
    <string name="rotates_once_text">Place the phone camera at an angle of zero degrees above the shoe\'s horizontal axis. The turntable turns one round.</string>
    <string name="rotates_two_text">Place the phone camera at an angle of 45 degrees above the shoe\'s horizontal axis. The turntable turns one round.</string>
    <string name="half_a_circle_text">Place the phone camera at an angle of 90 degrees above the shoe\'s horizontal axis. The turntable turns half a round.</string>
    <string name="turntable_in_a_circle_text">Put the shoe on its side. Place the phone camera at an angle of 0 to 15 degrees above the shoe\'s horizontal axis. The turntable turns one round.</string>
    <string name="in_a_circle_text">Put the shoe on its side. Place the phone camera at an angle of 45 degrees above the shoe\'s horizontal axis. The turntable turns one round.</string>
    <string name="ordinary_shooting_text">Ordinary shooting</string>
    <string name="need_to_be_taken_text">After you start shooting, please circle around the object; try to ensure that the environment around the object is concise; at least 20 shots need to be taken.</string>
    <string name="turntable_shooting_text">Turntable shooting</string>
    <string name="shooting_is_supported_text">The shooting steps are relatively complicated; and equipment such as turntables and mobile phone stabilizers are required; only horizontal screen shooting is supported</string>
    <string name="object_shoes_text">Applicable object: shoes</string>
    <string name="turntable_speed_text">Set the turntable speed</string>
    <string name="second_revolution_text">Second/revolution</string>
    <string name="delete_or_not_text">delete or not?</string>
    <string name="view_download_catalog">View download catalog</string>
    <string name="unrestricted_text">Lift restrictions</string>
    <string name="motion_capture_text">Motion capture</string>
    <string name="create_motion_des">Capture motions</string>
    <string name="choose_download_format_text">Choose download format</string>
    <string name="select_accuracy_mode_text">Select texture mode</string>
    <string name="low_accuracy_text">Normal texture</string>
    <string name="high_precision_text">PBR</string>
    <string name="limit_text">limit</string>
</resources>